# slack-genai-bot

./: .gitignore  README.md  pyproject.toml
slack_rag_bot/: config.py  main.py  response_generator.py  socket.py  tasks.py  worker.py
